kubernetes-resources/db/db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb-ss
  namespace: db-ns
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  serviceName: mongodb-service #add this as an env for backend pods
  template:
    metadata:
      name: mongodb-pod
      labels:
        app: mongodb
    spec:
      serviceAccountName: "db-secret-sa"
      terminationGracePeriodSeconds: 30
      #securityContext:
      #  runAsNonRoot: true
      affinity:
        podAntiAffinity:  # Use anti-affinity to spread replicas
          preferredDuringSchedulingIgnoredDuringExecution: #make it preferred to allow scheduling for first pod
            - weight: 100
              podAffinityTerm:
                topologyKey: topology.kubernetes.io/zone
                labelSelector:
                  matchLabels:
                    app: mongodb
      containers:
        - name: mongodb-container
          image: mongo:7.0
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: data-volume
              mountPath: /data/db
            - name: secrets-store
              mountPath: "/mnt/secrets-store"
              readOnly: true
          livenessProbe:
            exec:
              command: ["mongosh", "--eval", "db.adminCommand('ping')"]
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe:
            exec:
              command: ["mongosh", "--eval", "db.adminCommand('ping')"]
            initialDelaySeconds: 10
            periodSeconds: 5
      volumes:
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: db-secrets
  volumeClaimTemplates:
    - metadata:
        name: data-volume
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: ebs-sc
        resources:
          requests:
            storage: 1Gi
