kubernetes-resources/db/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb-ss
  namespace: db-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  serviceName: mongodb-service
  template:
    metadata:
      name: mongodb-pod
      labels:
        app: mongodb
    spec:
      terminationGracePeriodSeconds: 30
      securityContext:
        runAsNonRoot: true
      affinity:
        podAntiAffinity:  # Use anti-affinity to spread replicas
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: topology.kubernetes.io/zone
                labelSelector:
                  matchLabels:
                    app: mongodb
      containers:
        - name: mongodb-container
          image: mongodb/mongodb-community-server:7.0.1
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: data-volume
              mountPath: /data/db
          livenessProbe:
            exec:
              command: ["mongosh", "--eval", "db.adminCommand('ping')"]
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe:
            exec:
              command: ["mongosh", "--eval", "db.adminCommand('ping')"]
            initialDelaySeconds: 10
            periodSeconds: 5

  volumeClaimTemplates:
    - metadata:
        name: data-volume
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: ebs-sc
        resources:
          requests:
            storage: 1Gi
