kubernetes-resources/db/db-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: db-net-policy
  namespace: db-ns
spec:
  podSelector:
    matchLabels:
      app: mongodb
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              app: backend #namespace of backend
      ports:
        - protocol: TCP
          port: 27017 #mongodb connection port
